[package]
name = "common-clickhouse-srv"
version = "0.3.2"
authors = ["sundyli <543950155@qq.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Bindings for emulating a ClickHouse server."
readme = "README.md"

[features]
default = ["tokio_io"]
tls = ["tokio-native-tls"]
tokio_io = ["tokio"]

[dependencies]
common-io = {path = "../io"}

lazy_static = "1.4.0"
thiserror = "1.0.30"
chrono-tz = "0.6"
futures = "0.3"
futures-core = "0.3.5"
futures-sink = "0.3.5"
url="^2"
byteorder = "^1.3"
hostname = "^0.3"
lz4 = "1.23.2"
combine = "4.6.2"
pin-project = "1.0.4"
bytes = "1.0.0"
uuid = "0.8.1"
tokio-stream = "0.1"
async-trait = "0.1.48"

[dependencies.clickhouse-rs-cityhash-sys]
version = "0.1.2"

[dependencies.chrono]
version = "0.4"
default-features = false
features = [ "std" ]

[dependencies.tokio]
version = "1.12"
default-features = false
features = ["io-util", "net", "sync", "rt-multi-thread", "macros"]
optional = true

[dependencies.tokio-util]
version = "0.6.8"
features = ["full"]

[dependencies.futures-util]
version = "0.3.12"
features = ["sink"]

[dependencies.log]
version = "0.4.8"
features = ["std", "serde"]

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio-native-tls]
version = "^0.3"
optional = true

[dev-dependencies]
env_logger = "^0.9"
rand = "^0.8"