[package]
name = "common-clickhouse-srv"
version = "0.3.2"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Bindings for emulating a ClickHouse server."
readme = "README.md"

[lib]
doctest = false
test = false

[features]
default = ["tokio_io"]
tls = ["tokio-native-tls"]
tokio_io = ["tokio"]

[dependencies]
common-io = { path = "../io" }
common-tracing = {path = "../tracing" }

once_cell = "1.9.0"
thiserror = "1.0.30"
chrono-tz = "0.6.1"
futures = "0.3.21"
futures-core = "0.3.21"
futures-sink = "0.3.21"
url= "2.2.2"
byteorder = "1.4.3"
hostname = "0.3.1"
lz4 = "1.23.2"
combine = "4.6.3"
pin-project = "1.0.10"
bytes = "1.1.0"
uuid = "0.8.2"
tokio-stream = "0.1.8"
async-trait = "0.1.52"
naive-cityhash = "0.2.0"

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = [ "std" ]

[dependencies.tokio]
version = "1.16.1"
default-features = false
features = ["full"]
optional = true

[dependencies.tokio-util]
version = "0.6.9"
features = ["full"]

[dependencies.futures-util]
version = "0.3.21"
features = ["sink"]

[dependencies.log]
version = "0.4.14"
features = ["std", "serde"]

[dependencies.native-tls]
version = "0.2.8"
optional = true

[dependencies.tokio-native-tls]
version = "0.3.0"
optional = true

[dev-dependencies]
rand = "0.8.4"
