[package]
name = "common-clusters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
common-arrow = { path = "../arrow" }
common-base = { path = "../base" }
common-catalog = { path = "../catalog" }
common-config = { path = "../config" }
common-datavalues = { path = "../datavalues" }
common-exception = { path = "../exception" }
common-flight-rpc-client = { path = "../flight-rpc-client" }
common-grpc = { path = "../grpc" }
common-management = { path = "../management" }
common-meta-api = { path = "../meta/api" }
common-meta-store = { path = "../meta/store" }
common-meta-types = { path = "../meta/types" }
common-metrics = { path = "../metrics" }
common-storage = { path = "../storage" }
common-tracing = { path = "../tracing" }
common-users = { path = "../users" }

async-trait = "0.1.56"
clap = { version = "3.2.5", features = ["derive", "env"] }
futures = "0.3.21"
futures-util = "0.3.21"
itertools = "0.10.3"
metrics = "0.19.0"
num_cpus = "1.13.1"
once_cell = "1.12.0"
opendal = { version = "0.11.4", features = ["retry"] }
parking_lot = "0.12.1"
semver = "1.0.10"
serde = { version = "1.0.137", features = ["derive"] }
serfig = "0.0.2"
time = "0.3.10"
tracing = "0.1.35"
rand = "0.8.5"
