[package]
name = "codegen"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
common-datavalues = {path = "../datavalues"}
