[package]
name = "common-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
common-base = { path = "../base" }
common-exception = { path = "../exception"}
common-tracing = { path = "../tracing"}
common-storage = { path = "../storage"}
common-grpc = { path = "../grpc"}

async-trait = "0.1.56"
once_cell = "1.12.0"
opendal = { version = "0.11.0", features = ["retry"] }
time = "0.3.10"
clap = { version = "3.2.5", features = ["derive", "env"] }
semver = "1.0.10"
serde = { version = "1.0.137", features = ["derive"] }
serfig = "0.0.2"
