[package]
name = "common-configs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-base = { path = "../../common/base" }
common-exception = { path = "../../common/exception" }

# Github dependencies

# Crates.io dependencies
clap = { version = "3.1.8", features = ["derive", "env"] }
serde = { version = "1.0.136", features = ["derive"] }
